treewide: Commit this past week of work
I was also busy with finals, but transmitting `WRITE` data is now
successful.

However, long delays are merely a workaround. The implications to
transmitting `ACK`, baud rate disparity, and perhaps synchronisation,
etc to be discussed. None of this is good for performance, so use the
information as implied debugging.

Signed-off-by: Benjamin Doron <benjamin.doron00@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Userspace binary
 flash_rescue_userspace/flash_rescue_userspace
 
-# BIOS region; testing data
+# BIOS region (as testing data)
 *.fd
-flash_rescue_userspace/*test*
