treewide: Perform a little refactoring
May assist somewhat in porting to Win32 and preparing for PEI...
production?

Signed-off-by: Benjamin Doron <benjamin.doron00@gmail.com>

--- a/flash_rescue_userspace/Makefile
+++ b/flash_rescue_userspace/Makefile
@@ -1,10 +1,10 @@
 release: clean
-	gcc flash_rescue_userspace.c -o flash_rescue_userspace -Wall -D_FORTIFY_SOURCE=2 -O2 -mtune=native -march=native -pie -fPIE -fstack-protector-strong -mshstk -fcf-protection=full -lz -Wno-unused-result
+	gcc *.c -o flash_rescue_userspace -Wall -D_FORTIFY_SOURCE=2 -O2 -mtune=native -march=native -pie -fPIE -flto -fstack-protector-strong -mshstk -fcf-protection=full -lz -Wno-unused-result
 	strip flash_rescue_userspace
 
 debug: clean
-	clang-tidy -checks=bugprone\* flash_rescue_userspace.c
-	gcc flash_rescue_userspace.c -o flash_rescue_userspace -Wall -D_FORTIFY_SOURCE=2 -O2 -mtune=native -march=native -pie -fPIE -fstack-protector-strong -mshstk -fcf-protection=full -lz
+	clang-tidy -checks=bugprone\* *.c
+	gcc *.c -o flash_rescue_userspace -Wall -D_FORTIFY_SOURCE=2 -O2 -mtune=native -march=native -pie -fPIE -flto -fstack-protector-strong -mshstk -fcf-protection=full -lz
 
 clean:
 	rm -f flash_rescue_userspace
