treewide: Commit last work as of GSoC 2022 finals
This feature is now anticipated to work. Loading into CAR is successful
(though note that FSP provisions a fixed amount, and the
AspireVn7Dash572G requires a local patch, aligning the FSP-M temp mem
size back with other boards, which is also more correct).

A follow-up bug, where debug messages into the FIFO erase the HELLO
command has been mitigated by disabling `DEBUG()`, though remains
untested.

Signed-off-by: Benjamin Doron <benjamin.doron00@gmail.com>

--- a/flash_rescue_userspace/Makefile
+++ b/flash_rescue_userspace/Makefile
@@ -6,7 +6,7 @@ debug: flash_rescue_userspace
 	clang-tidy -checks=bugprone\* *.c
 
 flash_rescue_userspace: clean
-	gcc *.c -o flash_rescue_userspace -Wall -Wextra -Werror -D_FORTIFY_SOURCE=2 -O2 -mtune=native -march=native -pie -fPIE -flto -fstack-protector-strong -mshstk -fcf-protection=full -lz
+	gcc *.c -o flash_rescue_userspace -Wall -Wextra -Werror -D_FORTIFY_SOURCE=2 -O2 -flto -mtune=native -march=native -fanalyzer -pie -fPIE -fstack-protector-strong -lz  -mshstk -fcf-protection=full
 
 clean:
 	rm -f flash_rescue_userspace
